--- a/news-tool/tool/src/bundle/news_ca.properties
+++ b/news-tool/tool/src/bundle/news_ca.properties
@@ -25,8 +25,8 @@ cus.intadd = URL
 gen.alert = Avís:
 gen.can = Cancel·lar
 gen.sav = Actualitzar opcions
-plepro = Si us plau, aporteu un URL complet per a l'alimentació de notícies.
+plepro = Aporteu un URL complet per a l'alimentació de notícies.
 theisone = Hi ha un problema per ajustar les Autoritzacions en aquest moment.
 invalidfeed = no és una alimentació RSS vàlida.
 revise.required = Els elements necessaris estan marcats amb un
-unavailable= Aquest servei de notícies actualment no es troba disponible. Si us plau, torni a intentar-ho després. 
+unavailable= Aquest servei de notícies actualment no es troba disponible. Torneu-ho a intentar després. 
