SAK-18723 (contributed by Universidad Pública de Navarra)
git-svn-id: https://source.sakaiproject.org/svn/web/trunk@78916 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/news-tool/tool/src/bundle/news_es.properties
+++ b/news-tool/tool/src/bundle/news_es.properties
@@ -3,7 +3,7 @@ control.getupd=Aceptar actualizaci\u00F3n
 cus.cus=Opciones
 cus.franam=T\u00EDtulo de la herramienta
 cus.intadd=URL
-cus.pagnam=Titulo de la p\u00E1gina
+cus.pagnam=T\u00EDtulo de la p\u00E1gina
 cus.sugleg=(sugerencia\: 15 caracteres)
 gen.alert=Alerta\:
 gen.can=Cancelar
