--- a/news-impl/impl/src/bundle/news-impl_es.properties
+++ b/news-impl/impl/src/bundle/news-impl_es.properties
@@ -1,3 +1,4 @@
-is_not_a_valid_url = no es una direcci\u00F3n URL v\u00E1lida.
-unable_to_obtain_news_feed = Imposible obtener noticias desde
-unable_to_interpret = Imposible interpretar noticias desde
+#Thu Nov 18 07:39:14 CET 2010
+is_not_a_valid_url=no es una direcci\u00F3n URL v\u00E1lida.
+unable_to_obtain_news_feed=Imposible obtener noticias desde
+unable_to_interpret=Imposible interpretar noticias desde
