--- a/news-tool/tool/src/bundle/news_es.properties
+++ b/news-tool/tool/src/bundle/news_es.properties
@@ -1,17 +1,18 @@
-cannot=No es posible conectar u obtener el fichero especificado de la URL
-control.getupd=Aceptar actualizaci\u00F3n
-cus.cus=Opciones
-cus.franam=T\u00EDtulo de la herramienta
-cus.intadd=URL
+#Thu Nov 18 07:39:10 CET 2010
 cus.pagnam=T\u00EDtulo de la p\u00E1gina
-cus.sugleg=(sugerencia\: 15 caracteres)
-gen.alert=Alerta\:
 gen.can=Cancelar
-gen.sav=Actualizar opciones
-goto.graphics=Volver a la versi\u00F3n gr\u00E1fica (se abre un enalce a una ventana nueva)
-goto.item=Leer [ventana nueva]
+cus.franam=T\u00EDtulo de la herramienta
 invalidfeed=es una fuente RSS no v\u00E1lida.
+gen.sav=Actualizar opciones
+cus.cus=Opciones
 plepro=Por favor, indique una URL completa para la lectura de noticias.
+goto.item=Leer [ventana nueva]
+cannot=No es posible conectar u obtener el fichero especificado de la URL
+goto.graphics=Volver a la versi\u00F3n gr\u00E1fica (se abre un enalce a una ventana nueva)
+control.getupd=Aceptar actualizaci\u00F3n
+cus.sugleg=(sugerencia\: 15 caracteres)
+unavailable=Este servicio de noticias no est\u00E1 disponbile actualmente. Por favor, compru\u00E9belo de nuevo m\u00E1s tarde.
+gen.alert=Alerta\:
 revise.required=Los campos obligatorios est\u00E1n marcados por
 theisone=No se pueden actualizar los permisos porque el Sitio est\u00E1 siendo editado. Cierra los permisos en otras herramientas antes de continuar.
-unavailable=Este servicio de noticias no est\u00E1 disponbile actualmente. Por favor, compru\u00E9belo de nuevo m\u00E1s tarde.
+cus.intadd=URL
