--- a/news-tool/tool/src/bundle/news_nl.properties
+++ b/news-tool/tool/src/bundle/news_nl.properties
@@ -1,18 +1,18 @@
-#Stored by I18NEdit, may be edited!
-cannot=Kan geen verbinding of bestand krijgen via de Library Reserves bestand URL 
-control.getupd=Wijzigingen ophalen
-cus.cus=Optie nieuws
-cus.franam=Titel
-cus.intadd=URL
+#Thu Nov 18 07:48:35 CET 2010
 cus.pagnam=Pagina Titel
-cus.sugleg=(aanbevolen lengte 15 karakters)
-gen.alert=Waarschuwing\:
 gen.can=Annuleren
-gen.sav=Opties wijzigen
-goto.graphics=Ga naar grafieke versie (links open in nieuwe venster)
-goto.item=Lees [nieuwe venster]
+cus.franam=Titel
 invalidfeed=is een ongeldige RSS invoer.
+gen.sav=Opties wijzigen
+cus.cus=Optie nieuws
 plepro=Vul een volledige URL in voor de nieuwsinvoer.
+goto.item=Lees [nieuwe venster]
+cannot=Kan geen verbinding of bestand krijgen via de Library Reserves bestand URL 
+goto.graphics=Ga naar grafieke versie (links open in nieuwe venster)
+control.getupd=Wijzigingen ophalen
+cus.sugleg=(aanbevolen lengte 15 karakters)
+unavailable=Deze nieuwsdienst is momenteel niet beschikbaar. Probeer het later nog eens.
+gen.alert=Waarschuwing\:
 revise.required=Verplichte items gemarkeerd met een 
 theisone=Er is momenteel een probleem met het instellen van bevoegdheden.
-unavailable = Deze nieuwsdienst is momenteel niet beschikbaar. Probeer het later nog eens.
+cus.intadd=URL
