--- a/web-tool/tool/src/bundle/iframe_ca.properties
+++ b/web-tool/tool/src/bundle/iframe_ca.properties
@@ -1,45 +1,31 @@
-#
-# Copyright (c) 2009 Sakai Foundation
-#
-# Licensed under the Educational Community License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-# http://www.osedu.org/licenses/ECL-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-# 
-gen.alert = Avís:
-gen.custom = Personalitzar el marc
-gen.custom.site = Personalitzar la informació del servidor
-gen.custom.worksite = Personalitzar la informació del lloc
-gen.custom.workspace = Personalitzar El meu espai de treball
-gen.height = Altura del marc
-gen.title = Títol
-gen.tootit = Tí­tol de l'eina
-gen.pagtit = Tí­tol de la pàgina
-gen.url = URL
-gen.save = Actualitzar opcions
-gen.cancel = Cancel·lar
-gen.options = Opcions
-gen.description = Descripció
-gen.info.url = Lloc Informació URL
-gen.info.url.msg = Si s'especifica, es mostrarà aquesta URL enlloc de la descripció del lloc
-gen.hei1 = 300 píxels
-gen.hei2 = 450 píxels
-gen.hei3 = 600 píxels (recomanat)
-gen.hei4 = 750 píxels
-gen.hei5 = 900 píxels
-gen.hei6 = 1200 píxels
-gen.hei7 = 1800 píxels
-gen.hei8 = 2400 píxels
-gen.heisomelse = Una altra cosa
-gen.custheight = Alçada personalitzada
-gen.pixels = pí­xels
-gen.info.pop = Emergent?
-java.alert.pleentval = L'alçada que heu introduït no era vàlida.
-gen.pixelshid=(en píxels)
+#Thu Nov 18 07:36:03 CET 2010
+gen.description=Descripci\u00F3
+gen.custom.worksite=Personalitzar la informaci\u00F3 del lloc
+gen.heisomelse=Una altra cosa
+gen.custom=Personalitzar el marc
+gen.title=T\u00EDtol
+gen.options=Opcions
+gen.cancel=Cancel\u00B7lar
+gen.alert=Av\u00EDs\:
+gen.pixelshid=(en p\u00EDxels)
+gen.pagtit=T\u00ED\u00ADtol de la p\u00E0gina
+gen.save=Actualitzar opcions
+gen.url=URL
+gen.custheight=Al\u00E7ada personalitzada
+gen.info.url.msg=Si s'especifica, es mostrar\u00E0 aquesta URL enlloc de la descripci\u00F3 del lloc
+gen.info.url=Lloc Informaci\u00F3 URL
+gen.hei8=2400 p\u00EDxels
+gen.hei7=1800 p\u00EDxels
+gen.custom.site=Personalitzar la informaci\u00F3 del servidor
+gen.pixels=p\u00ED\u00ADxels
+gen.hei6=1200 p\u00EDxels
+gen.height=Altura del marc
+gen.hei5=900 p\u00EDxels
+gen.hei4=750 p\u00EDxels
+gen.info.pop=Emergent?
+gen.hei3=600 p\u00EDxels (recomanat)
+gen.hei2=450 p\u00EDxels
+java.alert.pleentval=L'al\u00E7ada que heu introdu\u00EFt no era v\u00E0lida.
+gen.hei1=300 p\u00EDxels
+gen.tootit=T\u00ED\u00ADtol de l'eina
+gen.custom.workspace=Personalitzar El meu espai de treball
