--- a/web-tool/tool/src/bundle/iframe_es.properties
+++ b/web-tool/tool/src/bundle/iframe_es.properties
@@ -1,30 +1,31 @@
-gen.alert=Alerta\:
-gen.cancel=Cancelar
-gen.custheight=Altura personalizada
-gen.custom=Personalizar el contenido Web
-gen.custom.site=Personalizar la informaci\u00F3n del servidor
-gen.custom.worksite=Personalizar la informaci\u00F3n del Sitio
-gen.custom.workspace=Personalizar Mi Sakai
+#Thu Nov 18 07:38:56 CET 2010
 gen.description=Descripci\u00F3n
-gen.hei1=300 p\u00EDxeles
-gen.hei2=450 p\u00EDxeles
-gen.hei3=600 p\u00EDxeles
-gen.hei4=750 p\u00EDxeles
-gen.hei5=900 p\u00EDxeles
-gen.hei6=1200 p\u00EDxeles
-gen.hei7=1800 p\u00EDxeles
-gen.hei8=2400 p\u00EDxeles
-gen.height=Altura del marco
+gen.custom.worksite=Personalizar la informaci\u00F3n del Sitio
 gen.heisomelse=Otra
-gen.info.pop=\u00BFAbrir en una ventana nueva?
-gen.info.url=URL de Informaci\u00F3n del Sitio
-gen.info.url.msg=Si se especifica, se mostrar\u00E1 esta URL en lugar de la descripci\u00F3n del Sitio
-gen.options=Opciones
-gen.pagtit=P\u00E1gina de la herramienta
-gen.pixels=p\u00EDxeles
-gen.pixelshid=(en p\u00EDxeles)
-gen.save=Actualizar
+gen.custom=Personalizar el contenido Web
 gen.title=T\u00EDtulo
-gen.tootit=T\u00EDtulo de la herramienta
+gen.options=Opciones
+gen.cancel=Cancelar
+gen.alert=Alerta\:
+gen.pixelshid=(en p\u00EDxeles)
+gen.pagtit=P\u00E1gina de la herramienta
+gen.save=Actualizar
 gen.url=URL
+gen.info.url.msg=Si se especifica, se mostrar\u00E1 esta URL en lugar de la descripci\u00F3n del Sitio
+gen.info.url=URL de Informaci\u00F3n del Sitio
+gen.custheight=Altura personalizada
+gen.hei8=2400 p\u00EDxeles
+gen.custom.site=Personalizar la informaci\u00F3n del servidor
+gen.hei7=1800 p\u00EDxeles
+gen.pixels=p\u00EDxeles
+gen.hei6=1200 p\u00EDxeles
+gen.height=Altura del marco
+gen.hei5=900 p\u00EDxeles
+gen.hei4=750 p\u00EDxeles
+gen.info.pop=\u00BFAbrir en una ventana nueva?
+gen.hei3=600 p\u00EDxeles
+gen.hei2=450 p\u00EDxeles
 java.alert.pleentval=La altura que ha introducido no es v\u00E1lida.
+gen.hei1=300 p\u00EDxeles
+gen.tootit=T\u00EDtulo de la herramienta
+gen.custom.workspace=Personalizar Mi Sakai
