--- a/news-impl/impl/src/bundle/news-impl_ca.properties
+++ b/news-impl/impl/src/bundle/news-impl_ca.properties
@@ -1,20 +1,4 @@
-#
-# Copyright (c) 2009 Sakai Foundation
-#
-# Licensed under the Educational Community License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-# http://www.osedu.org/licenses/ECL-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#
-
-
-is_not_a_valid_url = no és una adreça URL vàlida.
-unable_to_obtain_news_feed = Impossible obtenir notícies des de
-unable_to_interpret = Impossible interpretar notícies des de
+#Thu Nov 18 07:36:56 CET 2010
+is_not_a_valid_url=no \u00E9s una adre\u00E7a URL v\u00E0lida.
+unable_to_obtain_news_feed=Impossible obtenir not\u00EDcies des de
+unable_to_interpret=Impossible interpretar not\u00EDcies des de
