--- a/news-impl/impl/src/bundle/news-impl_fr_CA.properties
+++ b/news-impl/impl/src/bundle/news-impl_fr_CA.properties
@@ -1,6 +1,4 @@
-
-is_not_a_valid_url = n'est pas un URL valide et complet.
-
-unable_to_interpret = Impossible d'interpr\u00E9ter l'alimentation Usenet de
-
-unable_to_obtain_news_feed = Impossible d'obtenir l'alimentation Usenet de
+#Thu Nov 18 07:44:06 CET 2010
+is_not_a_valid_url=n'est pas un URL valide et complet.
+unable_to_obtain_news_feed=Impossible d'obtenir l'alimentation Usenet de
+unable_to_interpret=Impossible d'interpr\u00E9ter l'alimentation Usenet de
