--- a/news-impl/impl/src/bundle/news-impl_pt_BR.properties
+++ b/news-impl/impl/src/bundle/news-impl_pt_BR.properties
@@ -1,8 +1,4 @@
-#-------------------------------------------------------------------------------
-# Translated by: e-Labora: e-Learning Laboratory - State University of Campinas
-# TIDIA-Ae Project Fapesp, Sao Paulo, Brazil
-#-------------------------------------------------------------------------------
-
-is_not_a_valid_url 	=	n\u00e3o \u00e9 uma URL completa e v\u00e1lida
-unable_to_obtain_news_feed 	=	N\u00e3o \u00e9 poss\u00edvel obter o feed de not\u00edcias de
-unable_to_interpret 	=	N\u00e3o \u00e9 poss\u00edvel interpretar o feed de not\u00edcias de
+#Thu Nov 18 07:49:26 CET 2010
+is_not_a_valid_url=n\u00E3o \u00E9 uma URL completa e v\u00E1lida
+unable_to_obtain_news_feed=N\u00E3o \u00E9 poss\u00EDvel obter o feed de not\u00EDcias de
+unable_to_interpret=N\u00E3o \u00E9 poss\u00EDvel interpretar o feed de not\u00EDcias de
