--- a/news-impl/impl/src/bundle/news-impl_pt_PT.properties
+++ b/news-impl/impl/src/bundle/news-impl_pt_PT.properties
@@ -1,3 +1,4 @@
-is_not_a_valid_url = n\u00e3o \u00e9 um URL completo e v\u00e1lido.
-unable_to_obtain_news_feed = N\u00e3o \u00e9 poss\u00edvel obter o canal de not\u00edcias de
-unable_to_interpret = N\u00e3o \u00e9 poss\u00edvel interpretar o canal de not\u00edcias de
+#Thu Nov 18 07:50:26 CET 2010
+is_not_a_valid_url=n\u00E3o \u00E9 um URL completo e v\u00E1lido.
+unable_to_obtain_news_feed=N\u00E3o \u00E9 poss\u00EDvel obter o canal de not\u00EDcias de
+unable_to_interpret=N\u00E3o \u00E9 poss\u00EDvel interpretar o canal de not\u00EDcias de
