--- a/news-impl/impl/src/bundle/news-impl_zh_CN.properties
+++ b/news-impl/impl/src/bundle/news-impl_zh_CN.properties
@@ -1,4 +1,4 @@
-#Stored by I18NEdit, may be edited!
+#Thu Nov 18 07:52:21 CET 2010
 is_not_a_valid_url=URL\u4E0D\u5B8C\u6574\u6216\u65E0\u6548
-unable_to_interpret=\u4E0D\u80FD\u89E3\u91CA\u65B0\u95FBfeed
 unable_to_obtain_news_feed=\u4E0D\u80FD\u6D3B\u52A8\u65B0\u95FB\u7684Feed
+unable_to_interpret=\u4E0D\u80FD\u89E3\u91CA\u65B0\u95FBfeed
