--- a/news-tool/tool/src/bundle/news_ca.properties
+++ b/news-tool/tool/src/bundle/news_ca.properties
@@ -1,32 +1,18 @@
-#
-# Copyright (c) 2009 Sakai Foundation
-#
-# Licensed under the Educational Community License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-# http://www.osedu.org/licenses/ECL-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-# 
-cannot = No es pot connectar ni obtenir un fitxer especificat per l'URL de font de reserves de biblioteques
-goto.graphics = Tornar a la versió gràfica (s'obre un enllaç cap a una finestra nova)
-goto.item = Llegir [finestra nova]
-control.getupd = Aconseguir actualització
-cus.cus = Opcions de notícies
-cus.franam = Títol
-cus.pagnam = Tí­tol de la pàgina
-cus.sugleg = (llargada recomanada: 15 caràcters)
-cus.intadd = URL
-gen.alert = Avís:
-gen.can = Cancel·lar
-gen.sav = Actualitzar opcions
-plepro = Aporteu un URL complet per a l'alimentació de notícies.
-theisone = Hi ha un problema per ajustar les Autoritzacions en aquest moment.
-invalidfeed = no és una alimentació RSS vàlida.
-revise.required = Els elements necessaris estan marcats amb un
-unavailable= Aquest servei de notícies actualment no es troba disponible. Torneu-ho a intentar després. 
+#Thu Nov 18 07:36:39 CET 2010
+cus.pagnam=T\u00ED\u00ADtol de la p\u00E0gina
+gen.can=Cancel\u00B7lar
+cus.franam=T\u00EDtol
+invalidfeed=no \u00E9s una alimentaci\u00F3 RSS v\u00E0lida.
+gen.sav=Actualitzar opcions
+cus.cus=Opcions de not\u00EDcies
+plepro=Aporteu un URL complet per a l'alimentaci\u00F3 de not\u00EDcies.
+goto.item=Llegir [finestra nova]
+cannot=No es pot connectar ni obtenir un fitxer especificat per l'URL de font de reserves de biblioteques
+goto.graphics=Tornar a la versi\u00F3 gr\u00E0fica (s'obre un enlla\u00E7 cap a una finestra nova)
+control.getupd=Aconseguir actualitzaci\u00F3
+cus.sugleg=(llargada recomanada\: 15 car\u00E0cters)
+unavailable=Aquest servei de not\u00EDcies actualment no es troba disponible. Torneu-ho a intentar despr\u00E9s. 
+gen.alert=Av\u00EDs\:
+revise.required=Els elements necessaris estan marcats amb un
+theisone=Hi ha un problema per ajustar les Autoritzacions en aquest moment.
+cus.intadd=URL
