--- a/news-tool/tool/src/bundle/news_zh_TW.properties
+++ b/news-tool/tool/src/bundle/news_zh_TW.properties
@@ -1,32 +1,17 @@
-
-#
-# Copyright (c) 2009 Sakai Foundation
-#
-# Licensed under the Educational Community License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-# http://www.osedu.org/licenses/ECL-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-# 
-cannot = \u7121\u6cd5\u9023\u63a5\u6216\u53d6\u5f97\u7531\u5716\u66f8\u9928\u4fdd\u7559\u5eab\u7684\u539f\u59cb\u7db2\u5740\u6307\u5b9a\u7684\u6a94\u6848 
-unavailable = \u9019\u500b\u65b0\u805e\u670d\u52d9\u6b64\u523b\u4e0d\u53ef\u7528\uff0c\u8acb\u7a0d\u5f8c\u518d\u6aa2\u67e5\u3002 
-goto.graphics = \u9032\u5165\u5716\u5f62\u7248\u672c\ufe5d\u9023\u7d50\u6703\u5728\u65b0\u7684\u8996\u7a97\u4e2d\u958b\u555f\ufe5e 
-goto.item = \u8b80\u53d6\ufe5d\u65b0\u8996\u7a97\ufe5e 
-control.getupd = \u7372\u5f97\u66f4\u65b0 
-cus.cus = \u65b0\u805e\u9078\u9805 
-cus.franam = \u5de5\u5177\u6a19\u984c 
-cus.pagnam = \u9801\u9762\u6a19\u984c 
-cus.sugleg = \ufe59\u5efa\u8b70\u9577\u5ea6\u70ba15\u500b\u5b57\u5143\u3002\ufe5a 
-gen.alert = \u8b66\u793a\uff1a 
-gen.can = \u53d6\u6d88 
-gen.sav = \u66f4\u65b0\u9078\u9805 
-plepro = \u8acb\u70ba\u65b0\u805e\u6458\u8981\u63d0\u4f9b\u4e00\u500b\u5b8c\u6574\u7684 URL\u3002 
-theisone = \u7531\u65bc\u8a72\u7db2\u7ad9\u6b63\u5728\u88ab\u7de8\u8f2f\uff0c\u76ee\u524d\u4e0d\u80fd\u8a2d\u5b9a\u6b0a\u9650\u3002\u8acb\u95dc\u9589\u5176\u5b83\u5de5\u5177\u4e2d\u7684\u6b0a\u9650\u8a2d\u5b9a\u5f8c\u518d\u9032\u884c\u64cd\u4f5c\u3002 
-invalidfeed = \u662f\u4e00\u500b\u7121\u6548\u7684 RSS \u6458\u8981\u3002 
-revise.required = \u5fc5\u586b\u7684\u9805\u76ee\u6a19\u6709\u8a18\u865f\u6a19\u8a8c 
+#Thu Nov 18 07:53:06 CET 2010
+cus.pagnam=\u9801\u9762\u6A19\u984C 
+gen.can=\u53D6\u6D88 
+cus.franam=\u5DE5\u5177\u6A19\u984C 
+invalidfeed=\u662F\u4E00\u500B\u7121\u6548\u7684 RSS \u6458\u8981\u3002 
+gen.sav=\u66F4\u65B0\u9078\u9805 
+cus.cus=\u65B0\u805E\u9078\u9805 
+plepro=\u8ACB\u70BA\u65B0\u805E\u6458\u8981\u63D0\u4F9B\u4E00\u500B\u5B8C\u6574\u7684 URL\u3002 
+goto.item=\u8B80\u53D6\uFE5D\u65B0\u8996\u7A97\uFE5E 
+cannot=\u7121\u6CD5\u9023\u63A5\u6216\u53D6\u5F97\u7531\u5716\u66F8\u9928\u4FDD\u7559\u5EAB\u7684\u539F\u59CB\u7DB2\u5740\u6307\u5B9A\u7684\u6A94\u6848 
+goto.graphics=\u9032\u5165\u5716\u5F62\u7248\u672C\uFE5D\u9023\u7D50\u6703\u5728\u65B0\u7684\u8996\u7A97\u4E2D\u958B\u555F\uFE5E 
+control.getupd=\u7372\u5F97\u66F4\u65B0 
+cus.sugleg=\uFE59\u5EFA\u8B70\u9577\u5EA6\u70BA15\u500B\u5B57\u5143\u3002\uFE5A 
+unavailable=\u9019\u500B\u65B0\u805E\u670D\u52D9\u6B64\u523B\u4E0D\u53EF\u7528\uFF0C\u8ACB\u7A0D\u5F8C\u518D\u6AA2\u67E5\u3002 
+gen.alert=\u8B66\u793A\uFF1A 
+revise.required=\u5FC5\u586B\u7684\u9805\u76EE\u6A19\u6709\u8A18\u865F\u6A19\u8A8C 
+theisone=\u7531\u65BC\u8A72\u7DB2\u7AD9\u6B63\u5728\u88AB\u7DE8\u8F2F\uFF0C\u76EE\u524D\u4E0D\u80FD\u8A2D\u5B9A\u6B0A\u9650\u3002\u8ACB\u95DC\u9589\u5176\u5B83\u5DE5\u5177\u4E2D\u7684\u6B0A\u9650\u8A2D\u5B9A\u5F8C\u518D\u9032\u884C\u64CD\u4F5C\u3002 
