--- a/web-tool/tool/src/bundle/iframe_en_GB.properties
+++ b/web-tool/tool/src/bundle/iframe_en_GB.properties
@@ -1,8 +1,5 @@
-# Based on the following default (US English) properties file:
-# https://source.sakaiproject.org/svn/web/branches/sakai_2-4-x/web-tool/tool/src/bundle/iframe.properties@33499
-
-#General Vm
-gen.custom = Customise Web Content
-gen.custom.site = Customise Server Info Display
-gen.custom.worksite = Customise Site Info Display
-gen.custom.workspace = Customise My Workspace Info Display
+#Thu Nov 18 07:37:46 CET 2010
+gen.custom.workspace=Customise My Workspace Info Display
+gen.custom=Customise Web Content
+gen.custom.site=Customise Server Info Display
+gen.custom.worksite=Customise Site Info Display
