--- a/web-tool/tool/src/bundle/iframe_ko.properties
+++ b/web-tool/tool/src/bundle/iframe_ko.properties
@@ -1,29 +1,17 @@
-#General Vm	
-gen.alert = \uacbd\uace0:
-gen.custom = \ud504\ub808\uc784 \uc124\uc815 \ubcc0\uacbd\ud558\uae30
-gen.frame = \ud504\ub808\uc784 \uc124\uc815
-gen.height = \ud504\ub808\uc784 \ub192\uc774
-gen.title = \uc81c\ubaa9
-gen.display = \uc11c\ubc84 \uc815\ubcf4 \ubcf4\uc5ec\uc8fc\uae30
-gen.displaymy = \ub098\uc758 \uc791\uc5c5\uacf5\uac04 \uc815\ubcf4
-gen.displaythis = \uc0ac\uc774\ud2b8 \uc18c\uac1c
-gen.displayurl = \uc6f9\uc0ac\uc774\ud2b8
-gen.url = \uc6f9\uc0ac\uc774\ud2b8 \uc8fc\uc18c
-gen.save = \ubcc0\uacbd\ud558\uae30
-gen.cancel = \ucde8\uc18c\ud558\uae30
-gen.options = \uc635\uc158
-gen.suglen = (\ucd5c\uace0 15\uc790\uae4c\uc9c0 \uc785\ub825\uac00\ub2a5)
-gen.desc = \ud45c\uc2dc\ud560 \ub0b4\uc6a9
-
-options.workspace = \ub098\uc758 \uc791\uc5c5\uacf5\uac04 \uc635\uc158
-options.worksite = \uc0ac\uc774\ud2b8 \uc815\ubcf4 \uc635\uc158
-options.webcontent = \uc6f9\ubb38\uc11c \uc635\uc158
-
-gen.hei1 = 300 \ud53d\uc140
-gen.hei2 = 450 \ud53d\uc140
-gen.hei3 = 600 \ud53d\uc140(\ucd94\ucc9c\uc0ac\uc591)
-gen.hei4 = 750 \ud53d\uc140
-gen.hei5 = 900 \ud53d\uc140
-gen.hei6 = 1200 \ud53d\uc140
-gen.hei7 = 1800 \ud53d\uc140
-gen.hei8 = 2400 \ud53d\uc140
+#Thu Nov 18 07:47:52 CET 2010
+gen.custom=\uD504\uB808\uC784 \uC124\uC815 \uBCC0\uACBD\uD558\uAE30
+gen.title=\uC81C\uBAA9
+gen.options=\uC635\uC158
+gen.cancel=\uCDE8\uC18C\uD558\uAE30
+gen.alert=\uACBD\uACE0\:
+gen.save=\uBCC0\uACBD\uD558\uAE30
+gen.url=\uC6F9\uC0AC\uC774\uD2B8 \uC8FC\uC18C
+gen.hei8=2400 \uD53D\uC140
+gen.hei7=1800 \uD53D\uC140
+gen.hei6=1200 \uD53D\uC140
+gen.height=\uD504\uB808\uC784 \uB192\uC774
+gen.hei5=900 \uD53D\uC140
+gen.hei4=750 \uD53D\uC140
+gen.hei3=600 \uD53D\uC140(\uCD94\uCC9C\uC0AC\uC591)
+gen.hei2=450 \uD53D\uC140
+gen.hei1=300 \uD53D\uC140
