--- a/web-tool/tool/src/bundle/iframe_nl.properties
+++ b/web-tool/tool/src/bundle/iframe_nl.properties
@@ -1,30 +1,30 @@
-#Stored by I18NEdit, may be edited!
-gen.alert=Waarschuwing\:
-gen.cancel=Annuleren
-gen.custheight=Hoogte
-gen.custom=Standaard frame
-gen.custom.site=Server info overzicht aanpassen
-gen.custom.worksite=Site info aanpassen
-gen.custom.workspace=Mijn werkruimte info aanpassen
+#Thu Nov 18 07:48:28 CET 2010
 gen.description=Omschrijving
-gen.hei1=300 pixels
-gen.hei2=450 pixels
-gen.hei3=600 pixels (aanbevolen)
-gen.hei4=750 pixels
-gen.hei5=900 pixels
-gen.hei6=1200 pixels
-gen.hei7=1800 pixels
-gen.hei8=2400 pixels
-gen.height=Frame hoogte
+gen.custom.worksite=Site info aanpassen
 gen.heisomelse=Iets anders
-gen.info.pop=Open in nieuwe venster?
-gen.info.url=Site Info URL
-gen.info.url.msg=Als aanwezig, deze URL wordt vertoond in plaats van de site omschrijving.
-gen.options=Opties
-gen.pagtit=Pagina titel
-gen.pixels=pixels
-gen.save=Opties wijzigen
+gen.custom=Standaard frame
 gen.title=Titel
-gen.tootit=Functie titel
+gen.options=Opties
+gen.cancel=Annuleren
+gen.alert=Waarschuwing\:
+gen.pagtit=Pagina titel
+gen.save=Opties wijzigen
 gen.url=URL
+gen.info.url.msg=Als aanwezig, deze URL wordt vertoond in plaats van de site omschrijving.
+gen.info.url=Site Info URL
+gen.custheight=Hoogte
+gen.hei8=2400 pixels
+gen.custom.site=Server info overzicht aanpassen
+gen.hei7=1800 pixels
+gen.pixels=pixels
+gen.hei6=1200 pixels
+gen.height=Frame hoogte
+gen.hei5=900 pixels
+gen.hei4=750 pixels
+gen.info.pop=Open in nieuwe venster?
+gen.hei3=600 pixels (aanbevolen)
+gen.hei2=450 pixels
 java.alert.pleentval=De ingevoerde hoogte is niet geldig.
+gen.hei1=300 pixels
+gen.tootit=Functie titel
+gen.custom.workspace=Mijn werkruimte info aanpassen
