--- a/web-tool/tool/src/bundle/iframe_pt_BR.properties
+++ b/web-tool/tool/src/bundle/iframe_pt_BR.properties
@@ -1,39 +1,30 @@
-#-------------------------------------------------------------------------------
-# Translated by: e-Labora: e-Learning Laboratory - State University of Campinas
-# TIDIA-Ae Project Fapesp, Sao Paulo, Brazil
-#-------------------------------------------------------------------------------
-
-#General Vm		
-gen.alert 	=	Aten\u00e7\u00e3o:
-gen.custom 	=	Personalizar Links
-gen.custom.site 	=	Personalizar Apar\u00eancia do Server Info
-gen.custom.worksite 	=	Personalizar Apar\u00eancia do Site Info
-gen.custom.workspace 	=	Personalizar Apar\u00eancia do Meu Site
-gen.height 	=	Altura do Frame
-gen.title 	=	T\u00edtulo
-gen.tootit 	=	T\u00edtulo da Ferramenta
-gen.pagtit 	=	T\u00edtulo da P\u00e1gina
-gen.url 	=	URL
-gen.save 	=	Modificar Op\u00e7\u00f5es
-gen.cancel 	=	Cancelar
-gen.options 	=	Op\u00e7\u00f5es
-gen.description 	=	Descri\u00e7\u00e3o
-gen.info.url 	=	URL do Site Info
-gen.info.url.msg 	=	Se especificado, esta URL ser\u00e1 apresentada no lugar da descri\u00e7\u00e3o do Site.
-
-gen.hei1 	=	 300 pixels
-gen.hei2 	=	 450 pixels
-gen.hei3 	=	 600 pixels
-gen.hei4 	=	 750 pixels
-gen.hei5 	=	 900 pixels
-gen.hei6 	=	 1200 pixels
-gen.hei7 	=	 1800 pixels
-gen.hei8 	=	 2400 pixels
-gen.heisomelse 	=	Algo mais
-gen.custheight 	=	Altura configurada
-gen.pixels 	=	 pixels
-
-gen.info.pop 	=	Abrir em nova janela?
-
-
-java.alert.pleentval 	=	A altura que voc\u00ea entrou n\u00e3o \u00e9 v\u00e1lida.
+#Thu Nov 18 07:49:15 CET 2010
+gen.description=Descri\u00E7\u00E3o
+gen.custom.worksite=Personalizar Apar\u00EAncia do Site Info
+gen.heisomelse=Algo mais
+gen.custom=Personalizar Links
+gen.title=T\u00EDtulo
+gen.options=Op\u00E7\u00F5es
+gen.cancel=Cancelar
+gen.alert=Aten\u00E7\u00E3o\:
+gen.pagtit=T\u00EDtulo da P\u00E1gina
+gen.save=Modificar Op\u00E7\u00F5es
+gen.url=URL
+gen.custheight=Altura configurada
+gen.info.url.msg=Se especificado, esta URL ser\u00E1 apresentada no lugar da descri\u00E7\u00E3o do Site.
+gen.info.url=URL do Site Info
+gen.hei8=2400 pixels
+gen.hei7=1800 pixels
+gen.custom.site=Personalizar Apar\u00EAncia do Server Info
+gen.pixels=pixels
+gen.hei6=1200 pixels
+gen.height=Altura do Frame
+gen.hei5=900 pixels
+gen.hei4=750 pixels
+gen.info.pop=Abrir em nova janela?
+gen.hei3=600 pixels
+gen.hei2=450 pixels
+java.alert.pleentval=A altura que voc\u00EA entrou n\u00E3o \u00E9 v\u00E1lida.
+gen.hei1=300 pixels
+gen.tootit=T\u00EDtulo da Ferramenta
+gen.custom.workspace=Personalizar Apar\u00EAncia do Meu Site
