--- a/web-tool/tool/src/bundle/iframe_sv.properties
+++ b/web-tool/tool/src/bundle/iframe_sv.properties
@@ -1,47 +1,31 @@
-#
-# Copyright (c) 2008 Sakai Foundation
-#
-# Licensed under the Educational Community License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-# http://www.osedu.org/licenses/ECL-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-# 
-
-#Stored by I18NEdit, may be edited!
-gen.alert=Observera\:
-gen.cancel=Avbryt
-gen.custheight=Pixelh\u00F6jd
-gen.custom=Inst\u00E4llningar f\u00F6r extern webbplats
-gen.custom.site=Anpassa visning av serverinformation
-gen.custom.worksite=Anpassa visning av sajtinformation
-gen.custom.workspace=Anpassa visning av information om min arbetsyta
+#Thu Nov 18 07:22:35 CET 2010
 gen.description=Beskrivning
-gen.hei1=300 pixlar
-gen.hei2=450 pixlar
-gen.hei3=600 pixlar
-gen.hei4=750 pixlar
-gen.hei5=900 pixlar
-gen.hei6=1200 pixlar
-gen.hei7=1800 pixlar
-gen.hei8=2400 pixlar
-gen.height=Ramstorlek
+gen.custom.worksite=Anpassa visning av sajtinformation
 gen.heisomelse=Annan
-gen.info.pop=\u00D6ppna i nytt f\u00F6nster?
-gen.info.url=URL till sajtinformation
-gen.info.url.msg=Om angiven kommer denna URL visas ist\u00E4llet f\u00F6r sajtens beskrivning.
-gen.options=Inst\u00E4llningar
-gen.pagtit=Titel i v\u00E4nstermeny
-gen.pixels=pixlar
-gen.pixelshid=(i pixlar)
-gen.save=Spara
+gen.custom=Inst\u00E4llningar f\u00F6r extern webbplats
 gen.title=Titel
-gen.tootit=Titel p\u00E5 sida
+gen.options=Inst\u00E4llningar
+gen.cancel=Avbryt
+gen.alert=Observera\:
+gen.pixelshid=(i pixlar)
+gen.pagtit=Titel i v\u00E4nstermeny
+gen.save=Spara
 gen.url=URL
+gen.info.url.msg=Om angiven kommer denna URL visas ist\u00E4llet f\u00F6r sajtens beskrivning.
+gen.info.url=URL till sajtinformation
+gen.custheight=Pixelh\u00F6jd
+gen.hei8=2400 pixlar
+gen.custom.site=Anpassa visning av serverinformation
+gen.hei7=1800 pixlar
+gen.pixels=pixlar
+gen.hei6=1200 pixlar
+gen.height=Ramstorlek
+gen.hei5=900 pixlar
+gen.hei4=750 pixlar
+gen.info.pop=\u00D6ppna i nytt f\u00F6nster?
+gen.hei3=600 pixlar
+gen.hei2=450 pixlar
 java.alert.pleentval=Den storlek du angivit \u00E4r inte giltig.
+gen.hei1=300 pixlar
+gen.tootit=Titel p\u00E5 sida
+gen.custom.workspace=Anpassa visning av information om min arbetsyta
