--- a/web-tool/tool/src/bundle/iframe_zh_CN.properties
+++ b/web-tool/tool/src/bundle/iframe_zh_CN.properties
@@ -1,41 +1,30 @@
-#Stored by I18NEdit, may be edited!
-gen.alert=\u8B66\u544A\uFF1A
-gen.cancel=\u53D6\u6D88
+#Thu Nov 18 07:52:15 CET 2010
 gen.custheight=\u5B9A\u5236\u9AD8\u5EA6
-gen.custom=\u5B9A\u5236\u6846\u67B6
-gen.custom.site=\u5B9A\u5236\u201C\u670D\u52A1\u5668\u4FE1\u606F\u201D\u663E\u793A
-gen.custom.worksite=\u5B9A\u5236\u201C\u7AD9\u70B9\u4FE1\u606F\u201D\u663E\u793A
-gen.custom.workspace=\u5B9A\u5236\u201C\u6211\u7684\u5DE5\u4F5C\u53F0\u201D\u4FE1\u606F\u7684\u663E\u793A
-gen.desc=\u8BF4\u660E\u663E\u793A
-gen.description=\u63CF\u8FF0\u4FE1\u606F
-gen.display=\u663E\u793A\u670D\u52A1\u5668\u4FE1\u606F
-gen.displaymy=\u663E\u793A\u201C\u6211\u7684\u5DE5\u4F5C\u53F0\u201D\u4FE1\u606F
-gen.displaythis=\u663E\u793A\u6B64\u8BFE\u7A0B\u7AD9\u70B9\u7684\u8BF4\u660E\uFF08\u4ECE\u5B89\u88C5\uFF09
-gen.displayurl=\u663E\u793A\u6B64\u8DEF\u5F84
-gen.frame=\u6846\u67B6\u8BBE\u5B9A
-gen.hei1=300\u50CF\u7D20
-gen.hei2=450\u50CF\u7D20
-gen.hei3=600\u50CF\u7D20\uFF08\u63A8\u8350\uFF09
-gen.hei4=750\u50CF\u7D20
-gen.hei5=900\u50CF\u7D20
-gen.hei6=1200\u50CF\u7D20
-gen.hei7=1800\u50CF\u7D20
-gen.hei8=2400\u50CF\u7D20
+gen.info.url.msg=\u82E5\u5DF2\u6307\u5B9A\uFF0C\u5C06\u663E\u793A\u8FD9\u4E2AURL\uFF0C\u800C\u4E0D\u662F\u7AD9\u70B9\u63CF\u8FF0\u4FE1\u606F\u3002
 gen.height=\u6846\u67B6\u9AD8\u5EA6
 gen.heisomelse=\u5176\u4ED6...
-gen.info.pop=\u5F39\u51FA\uFF1F
-gen.info.url=\u7AD9\u70B9\u4FE1\u606FURL
-gen.info.url.msg=\u82E5\u5DF2\u6307\u5B9A\uFF0C\u5C06\u663E\u793A\u8FD9\u4E2AURL\uFF0C\u800C\u4E0D\u662F\u7AD9\u70B9\u63CF\u8FF0\u4FE1\u606F\u3002
-gen.options=\u9009\u9879
-gen.pagtit=\u9875\u9762\u6807\u9898
-gen.pixels=\u50CF\u7D20
-gen.save=\u66F4\u65B0\u9009\u9879
-gen.suglen=\uFF08\u5EFA\u8BAE\u957F\u5EA6\uFF1A15\u5B57\uFF09
-gen.title=\u6807\u9898
-gen.tootit=\u5DE5\u5177\u6807\u9898
+gen.custom.site=\u5B9A\u5236\u201C\u670D\u52A1\u5668\u4FE1\u606F\u201D\u663E\u793A
 gen.url=\u8DEF\u5F84
+gen.tootit=\u5DE5\u5177\u6807\u9898
+gen.info.pop=\u5F39\u51FA\uFF1F
+gen.cancel=\u53D6\u6D88
+gen.pixels=\u50CF\u7D20
+gen.title=\u6807\u9898
+gen.alert=\u8B66\u544A\uFF1A
+gen.custom.worksite=\u5B9A\u5236\u201C\u7AD9\u70B9\u4FE1\u606F\u201D\u663E\u793A
+gen.hei8=2400\u50CF\u7D20
+gen.custom=\u5B9A\u5236\u6846\u67B6
+gen.hei7=1800\u50CF\u7D20
+gen.hei6=1200\u50CF\u7D20
+gen.hei5=900\u50CF\u7D20
+gen.hei4=750\u50CF\u7D20
 java.alert.pleentval=\u60A8\u952E\u5165\u7684\u9AD8\u5EA6\u503C\u65E0\u6548\uFF01
-options.webcontent=\u7F51\u9875\u5185\u5BB9\u9009\u9879
-options.worksite=\u8BFE\u7A0B\u7AD9\u70B9\u4FE1\u606F\u9009\u9879
-options.workspace=\u6211\u7684\u5DE5\u4F5C\u53F0\u9009\u9879
-\u007F\#General=Vm\t
+gen.hei3=600\u50CF\u7D20\uFF08\u63A8\u8350\uFF09
+gen.hei2=450\u50CF\u7D20
+gen.hei1=300\u50CF\u7D20
+gen.pagtit=\u9875\u9762\u6807\u9898
+gen.info.url=\u7AD9\u70B9\u4FE1\u606FURL
+gen.description=\u63CF\u8FF0\u4FE1\u606F
+gen.save=\u66F4\u65B0\u9009\u9879
+gen.options=\u9009\u9879
+gen.custom.workspace=\u5B9A\u5236\u201C\u6211\u7684\u5DE5\u4F5C\u53F0\u201D\u4FE1\u606F\u7684\u663E\u793A
