--- a/news-tool/tool/src/bundle/news_ca.properties
+++ b/news-tool/tool/src/bundle/news_ca.properties
@@ -2,7 +2,7 @@
 cus.pagnam=T\u00ED\u00ADtol de la p\u00E0gina
 gen.can=Cancel\u00B7lar
 cus.franam=T\u00EDtol
-invalidfeed=no \u00E9s una alimentaci\u00F3 RSS v\u00E0lida.
+invalidfeed={0} no \u00E9s una alimentaci\u00F3 RSS v\u00E0lida.
 gen.sav=Actualitzar opcions
 cus.cus=Opcions de not\u00EDcies
 goto.item=Llegir [finestra nova]
@@ -11,7 +11,7 @@ cannot=No es pot connectar ni obtenir un fitxer especificat per l'URL de font de
 goto.graphics=Tornar a la versi\u00F3 gr\u00E0fica (s'obre un enlla\u00E7 cap a una finestra nova)
 control.getupd=Aconseguir actualitzaci\u00F3
 cus.sugleg=(llargada recomanada\: 15 car\u00E0cters)
-unavailable=Aquest servei de not\u00EDcies actualment no es troba disponible. Torneu-ho a intentar despr\u00E9s. 
+unavailable=Aquest servei de not\u00EDcies actualment no es troba disponible. Torneu-ho a intentar despr\u00E9s: [{0}] 
 gen.alert=Av\u00EDs\:
 revise.required=Els elements necessaris estan marcats amb un
 theisone=Hi ha un problema per ajustar les Autoritzacions en aquest moment.
