--- a/news-tool/tool/src/bundle/news_eu.properties
+++ b/news-tool/tool/src/bundle/news_eu.properties
@@ -2,7 +2,7 @@
 cus.pagnam=Orrialdearen titulua
 gen.can=Utzi
 cus.franam=Tresnaren titulua
-invalidfeed=baliorik gabeko RSS iturria da.
+invalidfeed={0} baliorik gabeko RSS iturria da.
 gen.sav=Eguneratu aukerak
 cus.cus=Albisteen aukerak
 goto.item=Irakurri [leiho berria]
@@ -11,7 +11,7 @@ cannot=Ezin da konektatu edo erdietsi URL iturburu-liburutegi erreserbak zehaztu
 goto.graphics=Zoaz grafikoen bertsiora [esteka beste leiho batean irekitzen da]
 control.getupd=Eguneratu
 cus.sugleg=(iradokitzen den luzera\: 15 karaktere)
-unavailable=Albiste zerbitzu hau ez dago erabilgarri orain. Berriz egiaztatu, arren, geroago.
+unavailable=Albiste zerbitzu hau ez dago erabilgarri orain. Berriz egiaztatu, arren, geroago: [{0}]
 gen.alert=Alerta\:
 revise.required=Beharrezko itemak honela daude markatuta\:
 theisone=Baimenak ezin dira eguneratu orain, gunea editatzen ari baita. Itxi baimenak beste tresna batzuetan ekin baino lehenago.
