--- a/news-tool/tool/src/bundle/news_ko.properties
+++ b/news-tool/tool/src/bundle/news_ko.properties
@@ -1,7 +1,7 @@
 #Fri Nov 26 20:34:13 CET 2010
 gen.can=\uCDE8\uC18C\uD558\uAE30
 cus.franam=\uC81C\uBAA9
-invalidfeed=\uC798\uBABB\uB41C RSS \uD53C\uB4DC\uC785\uB2C8\uB2E4.
+invalidfeed={0} \uC798\uBABB\uB41C RSS \uD53C\uB4DC\uC785\uB2C8\uB2E4.
 gen.sav=\uC635\uC158 \uBCC0\uACBD\uD558\uAE30
 cus.cus=\uC0C8 \uC635\uC158
 plepro=\uC0C8 \uD53C\uB4DC(feed) URL\uC744 \uC785\uB825\uD574\uC8FC\uC2ED\uC2DC\uC624.
