--- a/news-tool/tool/src/bundle/news_nl.properties
+++ b/news-tool/tool/src/bundle/news_nl.properties
@@ -2,7 +2,7 @@
 cus.pagnam=Pagina Titel
 gen.can=Annuleren
 cus.franam=Titel
-invalidfeed=is een ongeldige RSS invoer.
+invalidfeed={0} is een ongeldige RSS invoer.
 gen.sav=Opties wijzigen
 cus.cus=Optie nieuws
 goto.item=Lees [nieuwe venster]
