--- a/news-tool/tool/src/bundle/news_pt_BR.properties
+++ b/news-tool/tool/src/bundle/news_pt_BR.properties
@@ -2,7 +2,7 @@
 cus.pagnam=T\u00EDtulo da P\u00E1gina
 gen.can=Cancelar
 cus.franam=T\u00EDtulo da Ferramenta
-invalidfeed=\u00E9 um feed RSS inv\u00E1lido.
+invalidfeed={0} \u00E9 um feed RSS inv\u00E1lido.
 gen.sav=Atualizar Op\u00E7\u00F5es
 cus.cus=Op\u00E7\u00F5es de Not\u00EDcias
 goto.item=Ler [nova janela]
@@ -11,7 +11,7 @@ cannot=N\u00E3o \u00E9 poss\u00EDvel conectar ou obter um arquivo especificado p
 goto.graphics=Ir para vers\u00E3o gr\u00E1fica [o link abrir\u00E1 em uma nova janela]
 control.getupd=Obter Atualiza\u00E7\u00F5es
 cus.sugleg=(comprimento sugerido\: 15 caracteres)
-unavailable=Este servi\u00E7o de not\u00EDcias n\u00E3o est\u00E1 dispon\u00EDvel no momento. Por favor, consulte-o mais tarde.
+unavailable=Este servi\u00E7o de not\u00EDcias n\u00E3o est\u00E1 dispon\u00EDvel no momento. Por favor, consulte-o mais tarde: [{0}]
 gen.alert=Alerta\:
 revise.required=Itens obrigat\u00F3rios marcados com um 
 theisone=As permiss\u00F5es n\u00E3o podem ser definidas agora, porque o site est\u00E1 sendo editado. Feche as permiss\u00F5es em outras ferramentas antes de continuar.
