--- a/news-tool/tool/src/bundle/news_sv.properties
+++ b/news-tool/tool/src/bundle/news_sv.properties
@@ -2,7 +2,7 @@
 cus.pagnam=Titel i v\u00E4nstermeny
 gen.can=Avbryt
 cus.franam=Titel p\u00E5 sida
-invalidfeed=\u00E4r inte ett giltigt RSS-fl\u00F6de.
+invalidfeed={0} \u00E4r inte ett giltigt RSS-fl\u00F6de.
 gen.sav=Spara
 cus.cus=Inst\u00E4llningar f\u00F6r RSS-fl\u00F6de
 goto.item=L\u00E4s [nytt f\u00F6nster]
@@ -11,7 +11,7 @@ cannot=Kan ej n\u00E5 eller ladda URL\:en
 goto.graphics=Till grafikversion [l\u00E4nken \u00F6ppnas i nytt f\u00F6nster]
 control.getupd=Uppdatera
 cus.sugleg=(f\u00F6rslagsvis runt 15 tecken)
-unavailable=Detta RSS-fl\u00F6de \u00E4r inte tillg\u00E4ngligt just nu.
+unavailable=Detta RSS-fl\u00F6de \u00E4r inte tillg\u00E4ngligt just nu: [{0}]
 gen.alert=Observera\:
 revise.required=Obligatoriska f\u00E4lt markeras med en 
 theisone=Beh\u00F6righeter kan inte s\u00E4ttas just nu eftersom sajten h\u00E5ller p\u00E5 att editeras n\u00E5gon annanstans. St\u00E4ng beh\u00F6righeter i andra verktyg innan du forts\u00E4tter.
