--- a/news-tool/tool/src/bundle/news_tr_TR.properties
+++ b/news-tool/tool/src/bundle/news_tr_TR.properties
@@ -12,8 +12,8 @@ gen.can=Vazgeç
 gen.sav=Seçenekleri Güncelle
 goto.graphics=Görsel sürümüne git [ba\u011flant\u0131 yeni pencerede aç\u0131l\u0131r]
 goto.item=Oku [yeni pencere]
-invalidfeed=geçersiz bir RSS kayna\u011f\u0131d\u0131r.
+invalidfeed={0} geçersiz bir RSS kayna\u011f\u0131d\u0131r.
 plepro=Lütfen haber kayna\u011f\u0131 için tam bir URL sa\u011flay\u0131n.
 revise.required=Gerekli ö\u011feler i\u015faretlendi
 theisone=Sitede düzenleme yap\u0131ld\u0131\u011f\u0131ndan \u015fu an için izinler atanamad\u0131. Devam etmeden önce di\u011fer araçlardaki izinleri kapat\u0131n.\ 
-unavailable=Bu haber hizmeti \u015fu an için mevcut de\u011fil. Lütfen daha sonra Lütfen daha sonra tekrar kontrol edin.
+unavailable=Bu haber hizmeti \u015fu an için mevcut de\u011fil. Lütfen daha sonra Lütfen daha sonra tekrar kontrol edin: [{0}]
