--- a/news-tool/tool/src/bundle/news_fr_FR.properties
+++ b/news-tool/tool/src/bundle/news_fr_FR.properties
@@ -2,7 +2,7 @@
 cus.pagnam=Titre de la page
 gen.can=Annuler
 cus.franam=Titre
-invalidfeed=est une source RSS invalide.
+invalidfeed={0} est une source RSS invalide.
 gen.sav=Mettre \u00E0 jour les options
 cus.cus=Nouvelles options
 goto.item=Lire  [nouvelle fen\u00EAtre]
@@ -11,7 +11,7 @@ cannot=Impossible de connecter ou d'obtenir un fichier sp\u00E9cifi\u00E9 par l'
 goto.graphics=Aller \u00E0 la version graphique [le lien sera ouvert dans une nouvelle fen\u00EAtre]
 control.getupd=Obtenir une mise \u00E0 jour
 cus.sugleg=(longueur sugg\u00E9r\u00E9e\: 15 caract\u00E8res)
-unavailable=Ce service de nouvelles est indisponible pour le moment. Veuillez r\u00E9essayer ult\u00E9rieurement.
+unavailable=Ce service de nouvelles est indisponible pour le moment. Veuillez r\u00E9essayer ult\u00E9rieurement: [{0}]
 gen.alert=Alerte\:
 revise.required=Les \u00E9l\u00E9ments obligatoires sont indiqu\u00E9s par un
 theisone=Les droits d'acc\u00E8s ne peuvent \u00EAtre r\u00E9gl\u00E9s actuellement parce que le site est d\u00E9j\u00E0 en train d'\u00EAtre \u00E9dit\u00E9. Fermez les droits d'acc\u00E8s dans les autres outils avant de continuer.
