--- a/news-tool/tool/src/bundle/news_vi.properties
+++ b/news-tool/tool/src/bundle/news_vi.properties
@@ -3,7 +3,7 @@
 #To test out Vietnamse Sakai, you may go to http://vietsakai.huric.net 
 #
 #Tue Sep 07 15:05:29 PDT 2010
-unavailable=D\u1ECBch v\u1EE5 n\u00E0y tin l\u00E0 kh\u00F4ng c\u00F3 s\u1EB5n t\u1EA1i th\u1EDDi \u0111i\u1EC3m n\u00E0y. Xin vui l\u00F2ng ki\u1EC3m tra l\u1EA1i sau. 
+unavailable=D\u1ECBch v\u1EE5 n\u00E0y tin l\u00E0 kh\u00F4ng c\u00F3 s\u1EB5n t\u1EA1i th\u1EDDi \u0111i\u1EC3m n\u00E0y. Xin vui l\u00F2ng ki\u1EC3m tra l\u1EA1i sau: [{0}] 
 control.getupd=Nh\u1EADn \u0111\u01B0\u1EE3c Th\u00F4ng 
 cus.cus=Tin t\u1EE9c Options 
 cus.sugleg=(\u0110\u1EC1 ngh\u1ECB d\u00E0i 15 k\u00FD t\u1EF1) 
@@ -19,4 +19,4 @@ goto.graphics=T\u1EDBi \u0111\u1ED3 h\u1ECDa li\u00EAn k\u1EBFt [phi\u00EAn b\u1
 cus.pagnam=Ti\u00EAu \u0111\u1EC1 trang 
 theisone=Quy\u1EC1n kh\u00F4ng th\u1EC3 \u0111\u01B0\u1EE3c \u0111\u1EB7t v\u00E0o th\u1EDDi gian n\u00E0y v\u00EC c\u00E1c trang web \u0111\u00E3 \u0111\u01B0\u1EE3c ch\u1EC9nh s\u1EEDa. \u0110\u00F3ng quy\u1EC1n trong c\u00E1c c\u00F4ng c\u1EE5 kh\u00E1c tr\u01B0\u1EDBc khi ti\u1EBFp t\u1EE5c. 
 plepro=Xin vui l\u00F2ng cung c\u1EA5p m\u1ED9t URL ho\u00E0n ch\u1EC9nh cho c\u00E1c ngu\u1ED3n c\u1EA5p tin t\u1EE9c d\u1EEF li\u1EC7u. 
-invalidfeed=l\u00E0 m\u1ED9t RSS feed kh\u00F4ng h\u1EE3p l\u1EC7. 
+invalidfeed={0} l\u00E0 m\u1ED9t RSS feed kh\u00F4ng h\u1EE3p l\u1EC7. 
