--- a/news-tool/tool/src/bundle/news_zh_CN.properties
+++ b/news-tool/tool/src/bundle/news_zh_CN.properties
@@ -2,7 +2,7 @@
 cus.pagnam=\u9875\u9762\u6807\u9898
 gen.can=\u53D6\u6D88
 cus.franam=\u6807\u9898
-invalidfeed=\u6B64RSS\u4F20\u9001\u65E0\u6548
+invalidfeed={0} \u6B64RSS\u4F20\u9001\u65E0\u6548
 gen.sav=\u66F4\u65B0\u9009\u9879
 cus.cus=\u4FE1\u606F\u9009\u9879
 goto.item=\u8BFB\u53D6 [\u65B0\u7A97\u53E3]
@@ -11,7 +11,7 @@ cannot=\u65E0\u6CD5\u8FDE\u63A5\u6216\u53D6\u5F97\u7531\u56FE\u4E66\u9986\u50A8\
 goto.graphics=\u8FDB\u5165\u56FE\u5F62\u754C\u9762 [\u5728\u65B0\u7A97\u53E3\u4E2D\u6253\u5F00]
 control.getupd=\u83B7\u53D6\u66F4\u65B0
 cus.sugleg=(\u5EFA\u8BAE\u957F\u5EA6\:15\u4E2A\u5B57\u7B26\uFF09
-unavailable=\u8FD9\u4E2A\u6D88\u606F\u670D\u52A1\u73B0\u5728\u4E0D\u53EF\u7528\uFF0C\u8BF7\u7A0D\u540E\u6838\u5BF9\u786E\u8BA4
+unavailable=\u8FD9\u4E2A\u6D88\u606F\u670D\u52A1\u73B0\u5728\u4E0D\u53EF\u7528\uFF0C\u8BF7\u7A0D\u540E\u6838\u5BF9\u786E\u8BA4: [{0}]
 gen.alert=\u8B66\u544A\uFF1A
 revise.required=\u9879\u76EE\u9700\u8981\u505A\u4E00\u4E2A\u6807\u8BB0
 theisone=\u5F53\u524D\u65E0\u6CD5\u8BBE\u7F6E\u8BB8\u53EF
