--- a/web-tool/tool/src/bundle/iframe_es.properties
+++ b/web-tool/tool/src/bundle/iframe_es.properties
@@ -29,3 +29,4 @@ java.alert.pleentval=La altura que ha introducido no es v\u00E1lida.
 gen.hei1=300 p\u00EDxeles
 gen.tootit=T\u00EDtulo de la herramienta
 gen.custom.workspace=Personalizar Mi Sakai
+gen.info.title.message = Mensaje de informaci\u00F3n de MiSitio
