--- a/web-tool/tool/src/bundle/iframe_es.properties
+++ b/web-tool/tool/src/bundle/iframe_es.properties
@@ -29,4 +29,9 @@ java.alert.pleentval=La altura que ha introducido no es v\u00E1lida.
 gen.hei1=300 p\u00EDxeles
 gen.tootit=T\u00EDtulo de la herramienta
 gen.custom.workspace=Personalizar Mi Sakai
-gen.info.title.message = Mensaje de informaci\u00F3n de MiSitio
+gen.custom.annotatedurl=Personalizar presentaci\u00f3n de la Info del Profesor.
+gen.info.url.toolong=Site Info URL demasiado larga (max 255 car\u00E1cteres)
+gen.pagtit.empty=El t\u00ED de la herramienta no puede estar vac\u00EDo.
+gen.pagtit.toolong=T\u00ED de la herramienta demasiado largo (max 99 car\u00E1cteres)
+gen.tootit.empty=El t\u00ED de la herramienta no puede estar vac\u00EDo.
+gen.tootit.toolong=T\u00ED de la herramienta demasiado largo (max 99 car\u00E1cteres)gen.info.title.message = Mensaje de informaci\u00F3n de MiSitio
