SAK-20396 - merge trunk 92105 to  27x
git-svn-id: https://source.sakaiproject.org/svn/web/branches/sakai-2.7.x@93065 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/web-tool/tool/src/bundle/iframe_es.properties
+++ b/web-tool/tool/src/bundle/iframe_es.properties
@@ -28,3 +28,4 @@ gen.title=T\u00EDtulo
 gen.tootit=T\u00EDtulo de la herramienta
 gen.url=URL
 java.alert.pleentval=La altura que ha introducido no es v\u00E1lida.
+gen.info.title.message = Mensaje de informaci\u00F3n de MiSitio
