--- a/news-impl/impl/src/bundle/news-impl_tr_TR.properties
+++ b/news-impl/impl/src/bundle/news-impl_tr_TR.properties
@@ -1,3 +1,4 @@
-is_not_a_valid_url = is not a complete and valid URL.
-unable_to_obtain_news_feed = Unable to obtain news feed from
-unable_to_interpret = Unable to interpret news feed from
+
+is_not_a_valid_url=tam ve geçerli bir URL de\u011fil.
+unable_to_interpret=Okunam\u0131yan haber kayna\u011f\u0131\ 
+unable_to_obtain_news_feed=Al\u0131nam\u0131yan haber kayna\u011f\u0131\ 
