--- a/web-portlet/src/bundle/iframe_es_MX.properties
+++ b/web-portlet/src/bundle/iframe_es_MX.properties
@@ -28,7 +28,7 @@ gen.hei2=450 p\u00EDxeles
 java.alert.pleentval=La altura que ha introducido no es v\u00E1lida.
 gen.hei1=300 p\u00EDxeles
 gen.tootit=T\u00EDtulo de la herramienta
-gen.custom.workspace=Personalizar Mi Sakai
+gen.custom.workspace=Configuraci\u00F3n de M\u00F3dulo
 gen.custom.annotatedurl=Personalizar presentaci\u00f3n de la Info del Profesor.
 gen.info.url.toolong=Site Info URL demasiado larga (max 255 car\u00E1cteres)
 gen.pagtit.empty=El t\u00ED de la herramienta no puede estar vac\u00EDo.
