--- a/web-portlet/src/bundle/iframe_sv.properties
+++ b/web-portlet/src/bundle/iframe_sv.properties
@@ -1,3 +1,19 @@
+#
+# Copyright (c) 2008 Sakai Foundation
+#
+# Licensed under the Educational Community License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+# http://www.osedu.org/licenses/ECL-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+# 
+
 #Stored by I18NEdit, may be edited!
 gen.alert=Observera\:
 gen.cancel=Avbryt
@@ -25,8 +41,16 @@ gen.info.yes=ja
 gen.options=Inst\u00E4llningar
 gen.pagtit=Titel i v\u00E4nstermeny
 gen.pixels=pixlar
+gen.pixelshid=(i pixlar)
 gen.save=Spara
 gen.title=Titel
 gen.tootit=Titel p\u00E5 sida
 gen.url=URL
 java.alert.pleentval=Den storlek du angivit \u00E4r inte giltig.
+gen.custom.annotatedurl=               Customize Instruction Info Display
+gen.tootit.empty=                  Verkygets titel kan inte vara tomt
+gen.tootit.toolong=            Verktygstitel f\u00f6r l\u00e5ngt (max 99 tecken)
+gen.pagtit.empty=                Verktygets titel kan inte vara tomt
+gen.pagtit.toolong=               Verktygstitel f\u00f6r l\u00e5ngt (max 99 tecken)
+gen.info.url.toolong=                       URL till sajtinformationen \u00e4r f\u00f6r l\u00e5ng (max 99 tecken)
+gen.info.title.message=              Information f\u00f6r 'Min arbetsyta'
