--- a/web-portlet/src/bundle/iframe_ca.properties
+++ b/web-portlet/src/bundle/iframe_ca.properties
@@ -41,3 +41,4 @@ gen.url.empty           = L'adre\u00E7a URL no pot estar buida
 gen.url.invalid         = L'adre\u00E7a URL introdu\u00EFda no \u00E9s v\u00E0lida
 
 java.alert.pleentval = L'altura introdu\u00EFda no \u00E9s v\u00E0lida.
+gen.info.maximize    = Amplada m\u00E0xima a l'inici
