--- a/web-portlet/src/bundle/iframe_pl_PL.properties
+++ b/web-portlet/src/bundle/iframe_pl_PL.properties
@@ -42,3 +42,4 @@ gen.info.pop = Otworzy&#263; w nowym oknie?
 
 java.alert.pleentval = Podana wysoko&#347;&#263; jest nieprawid&#322;owa.
 gen.info.title.message = Komunikat informacyjny mojego Workspace
+gen.info.maximize = Uruchom Maksymaln&#261; Szeroko&#347;&#263;
