SAK-25547 Simplified Chinese translation upadte
git-svn-id: https://source.sakaiproject.org/svn/web/trunk@134006 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/web-tool/tool/src/bundle/iframe_zh_CN.properties
+++ b/web-tool/tool/src/bundle/iframe_zh_CN.properties
@@ -28,3 +28,13 @@ gen.hei1=300\u50CF\u7D20
 java.alert.pleentval=\u60A8\u952E\u5165\u7684\u9AD8\u5EA6\u503C\u65E0\u6548\uFF01
 gen.tootit=\u5DE5\u5177\u6807\u9898
 gen.custom.workspace=\u5B9A\u5236\u201C\u6211\u7684\u5DE5\u4F5C\u53F0\u201D\u4FE1\u606F\u7684\u663E\u793A
+gen.custom.annotatedurl=\u5B9A\u5236\u6307\u5BFC\u4FE1\u606F\u663E\u793A
+gen.info.title.message=\u6211\u7684\u5DE5\u4F5C\u7A7A\u95F4\u4FE1\u606F
+gen.info.url.toolong=\u7AD9\u70B9\u4FE1\u606FURL\u8FC7\u957F\uFF08\u6700\u591A255\u4E2A\u5B57\u7B26\uFF09
+gen.pagtit.empty=\u9875\u6807\u9898\u4E0D\u80FD\u4E3A\u7A7A
+gen.pagtit.toolong=\u9875\u6807\u9898\u8FC7\u957F\uFF08\u6700\u591A99\u4E2A\u5B57\u7B26\uFF09
+gen.pixelshid=\uFF08\u50CF\u7D20\uFF09
+gen.tootit.empty=\u5DE5\u5177\u6807\u9898\u4E0D\u80FD\u4E3A\u7A7A
+gen.tootit.toolong=\u5DE5\u5177\u6807\u9898\u8FC7\u957F\uFF08\u6700\u591A99\u4E2A\u5B57\u7B26\uFF09
+gen.url.empty=URL\u4E0D\u80FD\u4E3A\u7A7A
+gen.url.invalid=\u8F93\u5165\u7684URL\u4E0D\u6B63\u786E\u3002
