--- a/web-portlet/src/bundle/iframe_zh_CN.properties
+++ b/web-portlet/src/bundle/iframe_zh_CN.properties
@@ -28,3 +28,18 @@ gen.hei1=300\u50CF\u7D20
 java.alert.pleentval=\u60A8\u952E\u5165\u7684\u9AD8\u5EA6\u503C\u65E0\u6548\uFF01
 gen.tootit=\u5DE5\u5177\u6807\u9898
 gen.custom.workspace=\u5B9A\u5236\u201C\u6211\u7684\u5DE5\u4F5C\u53F0\u201D\u4FE1\u606F\u7684\u663E\u793A
+dissmiss.page.relaunch.message=Click to dismiss
+gen.custom.annotatedurl=\u5B9A\u5236\u663E\u793A\u7684\u6307\u5BFC\u4FE1\u606F
+gen.info.maximize=\u4F7F\u7528\u6700\u5927\u5BBD\u5EA6
+gen.info.title.message=\u6211\u7684\u5DE5\u4F5C\u7A7A\u95F4\u8BF4\u660E\u4FE1\u606F
+gen.info.url.toolong=\u7AD9\u70B9\u4FE1\u606F\u7684URL\u8FC7\u957F(\u6700\u591A255\u4E2A\u5B57\u8282)
+gen.pagtit.empty=\u9875\u9762\u6807\u9898\u4E0D\u80FD\u4E3A\u7A7A
+gen.pagtit.toolong=\u9875\u9762\u6807\u9898\u8FC7\u957F(\u6700\u591A99\u4E2A\u5B57\u8282)
+gen.pixelshid=(\u50CF\u7D20)
+gen.tootit.empty=\u5DE5\u5177\u6807\u9898\u4E0D\u80FD\u4E3A\u7A7A
+gen.tootit.toolong=\u5DE5\u5177\u6807\u9898\u8FC7\u957F(\u6700\u591A99\u4E2A\u5B57\u8282)
+gen.trouble.loading=\u672C\u9875\u9762\u8F7D\u5165\u65F6\u53D1\u751F\u9519\u8BEF\u3002
+gen.url.empty=URL\u4E0D\u80FD\u4E3A\u7A7A
+gen.url.invalid=\u60A8\u8F93\u5165\u7684URL\u65E0\u6548\u3002
+new.page.launch=\u5728\u65B0\u7A97\u53E3\u4E2D\u663E\u793A\u9875\u9762\u3002
+new.page.relaunch=\u5728\u65B0\u7A97\u53E3\u4E2D\u91CD\u65B0\u663E\u793A\u9875\u9762\u3002
