SAK-25743 - Update eu translation.
git-svn-id: https://source.sakaiproject.org/svn/web/trunk@306129 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/web-tool/tool/src/bundle/iframe_eu.properties
+++ b/web-tool/tool/src/bundle/iframe_eu.properties
@@ -1,31 +1,46 @@
-#Fri Nov 26 20:32:40 CET 2010
-gen.description=Azalpena
-gen.custom.worksite=Pertsonalizatu gunearen informazio bista
-gen.heisomelse=Zerbait gehiago
-gen.custom=Pertsonalizatu web edukia
-gen.title=Titulua
-gen.options=Aukerak
-gen.cancel=Utzi
+#X-Generator: crowdin.net
+#General Vm
 gen.alert=Alerta\:
-gen.pixelshid=(pixeletan)
-gen.pagtit=Orrialdearen titulua
-gen.save=Eguneratu aukerak
-gen.url=URLa
-gen.custheight=Pertsonalizatu garaiera
-gen.info.url.msg=Hala zehazten bada, URL hau erakutsiko da gunearen azalpenaren ordez.
-gen.info.url=Gunearen informazioaren URLa
-gen.hei8=2400 pixel
-gen.hei7=1800 pixel
+gen.custom=Pertsonalizatu web edukia
 gen.custom.site=Pertsonalizatu zerbitzariaren informazio bista
-gen.pixels=pixel
-gen.hei6=1200 pixel
-gen.height=Markoaren garaiera
-gen.hei5=900 pixel
-gen.hei4=750 pixel
-gen.info.pop=Ireki beste leiho batean?
-gen.hei3=600 pixel
-gen.hei2=450 pixel
-java.alert.pleentval=Sartu duzun garaiera ez da balioduna.
-gen.hei1=300 pixel
-gen.tootit=Tresnaren titulua
+gen.custom.worksite=Pertsonalizatu gunearen informazio bista
+gen.custom.annotatedurl=Customize Instruction Info Display
 gen.custom.workspace=Pertsonalizatu Nire Gunearen informazio bista
+gen.height=Markoaren garaiera
+gen.title=Titulua
+gen.tootit=Tresnaren titulua
+gen.tootit.empty=Tool title cannot be empty
+gen.tootit.toolong=Tool title is too long (max 99 characters)
+gen.pagtit=Orrialdearen titulua
+gen.pagtit.empty=Page title cannot be empty
+gen.pagtit.toolong=Page title is too long (max 99 characters)
+gen.url.empty=URL cannot be empty
+gen.url.invalid=The URL you entered is not valid.
+gen.url=URLa
+gen.save=Eguneratu aukerak
+gen.cancel=Utzi
+gen.options=Aukerak
+gen.description=Azalpena
+gen.info.url=Gunearen informazioaren URLa
+gen.info.url.msg=Hala zehazten bada, URL hau erakutsiko da gunearen azalpenaren ordez.
+gen.info.url.toolong=Site Info URL is too long (max 255 characters)
+
+gen.hei1=300 pixel
+gen.hei2=450 pixel
+gen.hei3=600 pixel
+gen.hei4=750 pixel
+gen.hei5=900 pixel
+gen.hei6=1200 pixel
+gen.hei7=1800 pixel
+gen.hei8=2400 pixel
+gen.heisomelse=Zerbait gehiago
+gen.custheight=Pertsonalizatu garaiera
+gen.pixels=pixel
+gen.pixelshid=(pixeletan)
+gen.info.pop=Ireki beste leiho batean?
+### (moot) gen.info.yes = yes
+### (moot) gen.info.no = no
+
+java.alert.pleentval=Sartu duzun garaiera ez da balioduna.
+gen.info.title.message=My Workspace Information Message
+
