--- a/news-impl/impl/src/bundle/news-impl_eu.properties
+++ b/news-impl/impl/src/bundle/news-impl_eu.properties
@@ -1,4 +1,5 @@
-#Fri Nov 26 20:32:44 CET 2010
+#X-Generator: crowdin.net
 is_not_a_valid_url=is not a complete and valid URL.
 unable_to_obtain_news_feed=Unable to obtain news feed from
 unable_to_interpret=Unable to interpret news feed from
+
