SAK-25743 - Update eu translations up to 100% (Crowdin - 2014) (Basque)
git-svn-id: https://source.sakaiproject.org/svn/web/trunk@307843 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/news-impl/impl/src/bundle/news-impl_eu.properties
+++ b/news-impl/impl/src/bundle/news-impl_eu.properties
@@ -1,5 +1,5 @@
 #X-Generator: crowdin.net
-is_not_a_valid_url=is not a complete and valid URL.
-unable_to_obtain_news_feed=Unable to obtain news feed from
-unable_to_interpret=Unable to interpret news feed from
+is_not_a_valid_url=URL hau ez da balioduna. 
+unable_to_obtain_news_feed=Ezin da feed berriak lortu hemendik\: 
+unable_to_interpret=Ezin da feed berria interpretatu hemendik\: 
 
