--- a/web-portlet/src/bundle/iframe_eu.properties
+++ b/web-portlet/src/bundle/iframe_eu.properties
@@ -5,17 +5,17 @@ gen.custom=Pertsonalizatu web edukia
 gen.custom.site=Pertsonalizatu zerbitzariaren informazio bista
 gen.custom.worksite=Pertsonalizatu gunearen informazio bista
 gen.custom.annotatedurl=Customize Instruction Info Display
-gen.custom.workspace=Pertsonalizatu Nire Gunearen informazio bista
+gen.custom.workspace=Pertsonalizatu NireGunearen informazio bista
 gen.height=Markoaren garaiera
 gen.title=Titulua
 gen.tootit=Tresnaren titulua
-gen.tootit.empty=Tool title cannot be empty
-gen.tootit.toolong=Tool title is too long (max 99 characters)
+gen.tootit.empty=Tresnaren titulua luzeegia da
+gen.tootit.toolong=Tresnaren titulua luzeegia da (gehienez 99 karaktere)
 gen.pagtit=Orrialdearen titulua
-gen.pagtit.empty=Page title cannot be empty
-gen.pagtit.toolong=Page title is too long (max 99 characters)
-gen.url.empty=URL cannot be empty
-gen.url.invalid=The URL you entered is not valid.
+gen.pagtit.empty=Orrialdearen titulua ezin da hutsik utzi
+gen.pagtit.toolong=Orrialdearen titulua luzeegia da (gehienez 99 karaktere)
+gen.url.empty=URL-aren eremua ezin da hutsik utzi
+gen.url.invalid=Sartu duzun URLa ez da balioduna
 gen.url=URLa
 gen.save=Eguneratu aukerak
 gen.cancel=Utzi
@@ -23,7 +23,7 @@ gen.options=Aukerak
 gen.description=Azalpena
 gen.info.url=Gunearen informazioaren URLa
 gen.info.url.msg=Hala zehazten bada, URL hau erakutsiko da gunearen azalpenaren ordez.
-gen.info.url.toolong=Site Info URL is too long (max 255 characters)
+gen.info.url.toolong=Guneko ULRa luzeegia da (gehienez 255 karaktere)
 
 gen.hei1=300 pixel
 gen.hei2=450 pixel
@@ -42,11 +42,11 @@ gen.info.pop=Ireki beste leiho batean?
 ### (moot) gen.info.no = no
 
 java.alert.pleentval=Sartu duzun garaiera ez da balioduna.
-gen.info.title.message=My Workspace Information Message
-gen.info.maximize=Launch Maximum Width
+gen.info.title.message=NireGuneko informazio-mezua
+gen.info.maximize=Lehioa zabaldu gehienezko zabaleran. 
 
-gen.trouble.loading=This page seems to have trouble loading.
+gen.trouble.loading=Errore bat badago orrialde hau zabaltzean. 
 
-new.page.launch=Page launched in a new window.
-new.page.relaunch=Re-launch page in a new window.
-dissmiss.page.relaunch.message=Click to dismiss 
+new.page.launch=Orrialdea zabalik lehio berri batean.
+new.page.relaunch=Berriro zabaldu lehio berri batean.
+dissmiss.page.relaunch.message=Ixteko klik egin.
