--- a/web-tool/tool/src/bundle/webcontent_eu.properties
+++ b/web-tool/tool/src/bundle/webcontent_eu.properties
@@ -1,4 +1,4 @@
 #X-Generator: crowdin.net
 # descriptions for web content entities
-webcontent=Represents the Web Content tool
-webcontent.action.site=Gets all of the web content items for the given site
+webcontent=Web edukia tresna adierazten du
+webcontent.action.site=Gune jakin baterako web edukien elementu guztiak lortu.
