SAK-28192 Update spanish translations in TRUNK up to 100%
git-svn-id: https://source.sakaiproject.org/svn/web/trunk@316128 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/web-portlet/src/bundle/iframe_es.properties
+++ b/web-portlet/src/bundle/iframe_es.properties
@@ -1,11 +1,10 @@
-#X-Generator: crowdin.net
 #General Vm
 gen.alert=Alerta\:
 gen.custom=Personalizar el contenido Web
 gen.custom.site=Personalizar la informaci\u00f3n del servidor
 gen.custom.worksite=Personalizar la informaci\u00f3n del Sitio
 gen.custom.annotatedurl=Personalizar presentaci\u00f3n de la Info del Profesor.
-gen.custom.workspace=Personalizar Mi Sakai
+gen.custom.workspace=Personalizar Mi Sitio
 gen.height=Altura del marco
 gen.title=T\u00edtulo
 gen.tootit=T\u00edtulo de la herramienta
