--- a/web-tool/tool/src/bundle/iframe_es.properties
+++ b/web-tool/tool/src/bundle/iframe_es.properties
@@ -1,16 +1,15 @@
-#X-Generator: crowdin.net
 #General Vm
 gen.alert=Alerta\:
 gen.custom=Personalizar el contenido Web
 gen.custom.site=Personalizar la informaci\u00f3n del servidor
 gen.custom.worksite=Personalizar la informaci\u00f3n del Sitio
 gen.custom.annotatedurl=Personalizar presentaci\u00f3n de la Info del Profesor.
-gen.custom.workspace=Personalizar Mi Sakai
+gen.custom.workspace=Personalizar Mi Sitio
 gen.height=Altura del marco
 gen.title=T\u00edtulo
 gen.tootit=T\u00edtulo de la herramienta
 gen.tootit.empty=El t\u00ed de la herramienta no puede estar vac\u00edo.
-gen.tootit.toolong=T\u00ed de la herramienta demasiado largo (max 99 car\u00e1cteres)gen.info.title.message \= Mensaje de informaci\u00f3n de MiSitio
+gen.tootit.toolong=El t\u00edtulo de la herramienta es demasiado largo (max 99 caracteres)
 gen.pagtit=P\u00e1gina de la herramienta
 gen.pagtit.empty=El t\u00ed de la herramienta no puede estar vac\u00edo.
 gen.pagtit.toolong=T\u00ed de la herramienta demasiado largo (max 99 car\u00e1cteres)
@@ -44,3 +43,5 @@ gen.info.pop=\u00bfAbrir en una ventana nueva?
 java.alert.pleentval=La altura que ha introducido no es v\u00e1lida.
 gen.info.title.message=Mensaje de informaci\u00f3n de MiSitio
 
+gen.trouble.loading=P\u00e1gina abierta en una nueva ventana.
+new.page.relaunch=Re-abriendo p\u00e1gina en una nueva ventana.
